--- a/Pipfile
+++ b/Pipfile
@@ -4,8 +4,7 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-flask = "*"
-flask-restplus = "*"
+Flask = "*"
 python-simplexml = "*"
 gunicorn = "*"
 
